--- a/FIPLY/App/app/src/main/res/layout/fragment_createuser4.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_createuser4.xml
@@ -8,23 +8,27 @@
         android:id="@+id/rbBeginner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Beginner" />
+        android:text="Beginner"
+        android:layout_gravity="center" />
 
     <RadioButton
         android:id="@+id/rbAverage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Average" />
+        android:text="Average"
+        android:layout_gravity="center" />
 
     <RadioButton
         android:id="@+id/rbPro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pro" />
+        android:text="Pro"
+        android:layout_gravity="center" />
 
     <RadioButton
         android:id="@+id/rbBodybuilder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bodybuilder" />
+        android:text="Bodybuilder"
+        android:layout_gravity="center" />
 </LinearLayout>
