--- a/FIPLY/App/app/src/main/res/layout/fragment_createuser.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_createuser.xml
@@ -1,41 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/relLayoutCreateU"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
     <EditText
-        android:id="@+id/etFirstName"
+        android:id="@+id/etName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView3"
+        android:layout_below="@+id/imgName"
         android:layout_centerHorizontal="true"
         android:ems="10"
         android:inputType="textPersonName" />
 
-    <EditText
-        android:id="@+id/etLastName"
+    <Spinner
+        android:id="@+id/spGender"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/etFirstName"
-        android:layout_below="@+id/textView4"
-        android:ems="10"
-        android:inputType="textPersonName" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/imgGender"
+        android:gravity="center" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
+    <ImageView
+        android:id="@+id/imgName"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="53dp"
-        android:text="Vorname:" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
+    <ImageView
+        android:id="@+id/imgGender"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/textView3"
-        android:layout_below="@+id/etFirstName"
-        android:layout_marginTop="52dp"
-        android:text="Nachname:" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/etName"
+        android:layout_toEndOf="@+id/imgName" />
+
+
 </RelativeLayout>
