--- a/FIPLY/App/app/src/main/res/layout/fragment_createuser2.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_createuser2.xml
@@ -8,35 +8,36 @@
         android:id="@+id/sbHeight"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:rotation="270"
-        android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="-160dp"
+        android:layout_marginRight="160dp"
+        android:rotation="270"
         android:splitTrack="false" />
 
     <SeekBar
         android:id="@+id/sbWeight"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Size"
         android:id="@+id/textView2"
-        android:layout_above="@+id/sbHeight"
-        android:layout_alignParentEnd="true" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Weight"
+        android:layout_above="@+id/sbHeight"
+        android:layout_alignParentStart="true"
+        android:text="Size"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
         android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/sbWeight"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true"
+        android:text="Weight"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </RelativeLayout>
