--- a/FIPLY/App/app/src/main/res/layout/navigation_list.xml
+++ b/FIPLY/App/app/src/main/res/layout/navigation_list.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/navlist_content"
@@ -11,6 +11,7 @@
         android:layout_margin="14dp"
         android:gravity="center"
         android:textColor="@color/darkNavigationText"
-        android:textSize="25dp" />
+        android:textSize="25dp"
+        android:background="@drawable/buttonshape"/>
 
 </LinearLayout>
