--- a/FIPLY/App/app/src/main/res/layout/fragment_createuser2.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_createuser2.xml
@@ -23,21 +23,22 @@
         android:layout_alignParentStart="true" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tvSizeStat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/sizeString"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_above="@+id/sbHeight"
         android:layout_alignParentStart="true"
-        android:text="Size"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:layout_marginStart="51dp" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tvWeightStat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/sbWeight"
         android:layout_centerHorizontal="true"
-        android:text="Weight"
+        android:text="@string/weightString"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </RelativeLayout>
