User Entry Overhaul
Default Values get assigned at the start.
Set Values get assigned when in usermanagement.
Size and Weight now correctly display the selected value.
Values get saved correctly

--- a/FIPLY/App/app/src/main/res/layout/fragment_createuser2.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_createuser2.xml
@@ -13,7 +13,8 @@
         android:layout_marginLeft="-160dp"
         android:layout_marginRight="160dp"
         android:rotation="270"
-        android:splitTrack="false" />
+        android:splitTrack="false"
+        android:longClickable="false" />
 
     <SeekBar
         android:id="@+id/sbWeight"
