--- a/FIPLY/App/app/src/main/res/layout/fragment_playlist.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_playlist.xml
@@ -18,7 +18,7 @@
             android:adjustViewBounds="true"
             android:background="@color/darkSecondary"
             android:scaleType="fitCenter"
-            android:src="@drawable/add" />
+            android:src="@drawable/plusorangesmall" />
 
         <ImageButton
             android:id="@+id/btPlDelete"
@@ -27,7 +27,7 @@
             android:adjustViewBounds="true"
             android:background="@color/darkSecondary"
             android:scaleType="fitCenter"
-            android:src="@drawable/delete" />
+            android:src="@drawable/minusorangesmall" />
 
         <Switch
             android:id="@+id/switchPl"
