--- a/FIPLY/App/app/src/main/res/layout/activity_splash.xml
+++ b/FIPLY/App/app/src/main/res/layout/activity_splash.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="htl_leonding.fiplyteam.fiply.SplashActivity">
+    tools:context="htl_leonding.fiplyteam.fiply.menu.SplashActivity">
 
     <!-- Stellt das Fiply-Logo mittels einer ImageView dar -->
     <ImageView
