Recreated last iteration trainingsplan

--- a/FIPLY/App/app/src/main/res/layout/fragment_main.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_main.xml
@@ -53,4 +53,14 @@
         android:text="@string/startPlaylist"
         android:textSize="25dp" />
 
+    <Button
+        android:id="@+id/btStartTrainView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"
+        android:background="@color/darkMenuButtons"
+        android:text="@string/startTrainView"
+        android:textSize="25dp" />
+
 </LinearLayout>
