--- a/FIPLY/App/app/src/main/res/layout/fragment_createuser.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_createuser.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/relLayoutCreateU"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+<RelativeLayout android:id="@+id/relLayoutCreateU"
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+    >
 
     <EditText
         android:id="@+id/etName"
@@ -12,7 +13,8 @@
         android:layout_below="@+id/imgName"
         android:layout_centerHorizontal="true"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        />
 
     <Spinner
         android:id="@+id/spGender"
@@ -20,14 +22,16 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/imgGender"
-        android:gravity="center" />
+        android:gravity="center"
+        />
 
     <ImageView
         android:id="@+id/imgName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        />
 
     <ImageView
         android:id="@+id/imgGender"
@@ -35,7 +39,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/etName"
-        android:layout_toEndOf="@+id/imgName" />
+        android:layout_toEndOf="@+id/imgName"
+        />
 
 
 </RelativeLayout>
