--- a/FIPLY/App/app/src/main/res/layout/fragment_createuser3.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_createuser3.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+    >
 
     <TextView
         android:id="@+id/tvAgeStat"
@@ -11,13 +12,15 @@
         android:layout_gravity="center"
         android:layout_marginTop="100dp"
         android:text="Age"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        />
 
     <Spinner
         android:id="@+id/spAge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        />
 
     <TextView
         android:id="@+id/tvProfStat"
@@ -26,12 +29,14 @@
         android:layout_gravity="center"
         android:layout_marginTop="100dp"
         android:text="Proficiency"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        />
 
     <Spinner
         android:id="@+id/spProf"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        />
 
 </LinearLayout>
