--- a/FIPLY/App/app/src/main/res/layout/fragment_main.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_main.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:paddingBottom="@dimen/activity_vertical_margin"
+              android:paddingLeft="@dimen/activity_horizontal_margin"
+              android:paddingRight="@dimen/activity_horizontal_margin"
+              android:paddingTop="@dimen/activity_vertical_margin"
+    >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/welcome" />
+        android:text="@string/welcome"
+        />
 
     <Button
         android:id="@+id/btStartUe"
@@ -21,7 +23,8 @@
         android:layout_marginTop="30dp"
         android:background="@color/darkMenuButtons"
         android:text="@string/startUe"
-        android:textSize="25dp" />
+        android:textSize="25dp"
+        />
 
     <Button
         android:id="@+id/btStartTr"
@@ -31,7 +34,8 @@
         android:layout_marginTop="30dp"
         android:background="@color/darkMenuButtons"
         android:text="@string/startTr"
-        android:textSize="25dp" />
+        android:textSize="25dp"
+        />
 
     <Button
         android:id="@+id/btStartEU"
@@ -41,7 +45,8 @@
         android:layout_marginTop="30dp"
         android:background="@color/darkMenuButtons"
         android:text="@string/startEU"
-        android:textSize="25dp" />
+        android:textSize="25dp"
+        />
 
     <Button
         android:id="@+id/btStartPlaylist"
@@ -51,7 +56,8 @@
         android:layout_marginTop="30dp"
         android:background="@color/darkMenuButtons"
         android:text="@string/startPlaylist"
-        android:textSize="25dp" />
+        android:textSize="25dp"
+        />
 
     <Button
         android:id="@+id/btStartTrainView"
@@ -61,6 +67,7 @@
         android:layout_marginTop="30dp"
         android:background="@color/darkMenuButtons"
         android:text="@string/startTrainView"
-        android:textSize="25dp" />
+        android:textSize="25dp"
+        />
 
 </LinearLayout>
