--- a/FIPLY/App/app/src/main/res/layout/fragment_trainingsinstructions.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_trainingsinstructions.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:saveEnabled="false">
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:saveEnabled="false"
+    >
 
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical"
-        android:weightSum="1">
+        android:weightSum="1"
+        >
 
         <TextView
             android:id="@+id/detailUebungName"
@@ -23,7 +25,8 @@
             android:layout_gravity="left"
             android:text="@string/detailName"
             android:textColor="@color/darkTextColorLight"
-            android:textSize="30dp" />
+            android:textSize="30dp"
+            />
 
         <TextView
             android:id="@+id/staticDetailMuskelGruppe"
@@ -35,7 +38,8 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="5dp"
             android:text="@string/detailMG"
-            android:textColor="@color/darkTextColorLight" />
+            android:textColor="@color/darkTextColorLight"
+            />
 
         <TextView
             android:id="@+id/detailMuskelGruppe"
@@ -47,7 +51,8 @@
             android:layout_marginRight="5dp"
             android:layout_toRightOf="@id/staticDetailMuskelGruppe"
             android:text="Test Muskelgruppe"
-            android:textColor="@color/darkTextColorLight" />
+            android:textColor="@color/darkTextColorLight"
+            />
 
         <TextView
             android:id="@+id/detailZielGruppe"
@@ -59,7 +64,8 @@
             android:layout_marginBottom="5dp"
             android:layout_marginRight="5dp"
             android:text="Test Zielgruppe"
-            android:textColor="@color/darkTextColorLight" />
+            android:textColor="@color/darkTextColorLight"
+            />
 
         <TextView
             android:id="@+id/staticDetailZielGruppe"
@@ -68,7 +74,8 @@
             android:layout_alignStart="@id/staticDetailMuskelGruppe"
             android:layout_below="@+id/staticDetailMuskelGruppe"
             android:text="@string/detailZG"
-            android:textColor="@color/darkTextColorLight" />
+            android:textColor="@color/darkTextColorLight"
+            />
 
         <TextView
             android:id="@+id/detailBeschreibung"
@@ -80,7 +87,8 @@
             android:layout_marginBottom="5dp"
             android:layout_marginRight="5dp"
             android:text="Test Beschreibung"
-            android:textColor="@color/darkTextColorLight" />
+            android:textColor="@color/darkTextColorLight"
+            />
 
         <TextView
             android:id="@+id/staticDetailBeschreibung"
@@ -89,7 +97,8 @@
             android:layout_alignStart="@id/staticDetailZielGruppe"
             android:layout_below="@+id/detailZielGruppe"
             android:text="@string/detailDesc"
-            android:textColor="@color/darkTextColorLight" />
+            android:textColor="@color/darkTextColorLight"
+            />
 
         <TextView
             android:id="@+id/detailAnleitung"
@@ -99,7 +108,8 @@
             android:layout_below="@id/detailBeschreibung"
             android:layout_marginRight="5dp"
             android:text="Test Anleitung"
-            android:textColor="@color/darkTextColorLight" />
+            android:textColor="@color/darkTextColorLight"
+            />
 
         <TextView
             android:id="@+id/staticDetailAnleitung"
@@ -108,7 +118,8 @@
             android:layout_alignStart="@id/staticDetailBeschreibung"
             android:layout_below="@+id/detailBeschreibung"
             android:text="@string/detailAnl"
-            android:textColor="@color/darkTextColorLight" />
+            android:textColor="@color/darkTextColorLight"
+            />
 
         <ImageButton
             android:id="@+id/ibLinkVideo"
@@ -126,15 +137,16 @@
             android:id="@+id/tvLinkVideo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/videoLink"
-            android:textColor="@color/darkTextColorFlashy"
-            android:padding="3dp"
-            android:textSize="16dp"
-            android:layout_below="@id/detailAnleitung"
-            android:layout_toRightOf="@id/ibLinkVideo"
             android:layout_alignBottom="@id/ibLinkVideo"
             android:layout_alignTop="@id/ibLinkVideo"
-            android:gravity="center_vertical"/>
+            android:layout_below="@id/detailAnleitung"
+            android:layout_toRightOf="@id/ibLinkVideo"
+            android:gravity="center_vertical"
+            android:padding="3dp"
+            android:text="@string/videoLink"
+            android:textColor="@color/darkTextColorFlashy"
+            android:textSize="16dp"
+            />
 
     </RelativeLayout>
 </ScrollView>
