--- a/FIPLY/App/app/src/main/res/layout/fragment_trainingsplantest.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_trainingsplantest.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+    >
 
     <ListView
+        android:id="@+id/testlistview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/testlistview"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        />
 </LinearLayout>
