--- a/FIPLY/App/app/src/main/res/layout/fragment_watch.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_watch.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin"
+    >
 
     <Chronometer
         android:id="@+id/myChronometer"
@@ -18,7 +19,8 @@
         android:layout_margin="3dp"
         android:background="@drawable/buttonshape"
         android:paddingLeft="5dp"
-        android:textSize="35dp" />
+        android:textSize="35dp"
+        />
 
     <Button
         android:id="@+id/btnWatchReset"
@@ -28,7 +30,8 @@
         android:layout_margin="3dp"
         android:layout_toEndOf="@+id/btnWatchStart"
         android:background="@drawable/buttonshape"
-        android:text="@string/watchReset" />
+        android:text="@string/watchReset"
+        />
 
     <Button
         android:id="@+id/btnWatchStart"
@@ -38,7 +41,8 @@
         android:layout_alignTop="@+id/btnWatchLap"
         android:layout_margin="3dp"
         android:background="@drawable/buttonshape"
-        android:text="@string/watchStart" />
+        android:text="@string/watchStart"
+        />
 
     <Button
         android:id="@+id/btnWatchLap"
@@ -48,6 +52,7 @@
         android:layout_below="@+id/btnWatchReset"
         android:layout_margin="3dp"
         android:background="@drawable/buttonshape"
-        android:text="@string/watchLap" />
+        android:text="@string/watchLap"
+        />
 
 </RelativeLayout>
