--- a/FIPLY/App/app/src/main/res/layout/music_item.xml
+++ b/FIPLY/App/app/src/main/res/layout/music_item.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/music_item"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<LinearLayout android:id="@+id/music_item"
+              xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+    >
 
     <TextView
         android:id="@+id/songTitle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="5dp"
         android:textColor="@color/darkPrimary"
-        android:padding="5dp"/>
+        />
 </LinearLayout>
