--- a/FIPLY/App/app/src/main/res/layout/music_item_checkable.xml
+++ b/FIPLY/App/app/src/main/res/layout/music_item_checkable.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/music_item"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+<LinearLayout android:id="@+id/music_item"
+              xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="horizontal"
+    >
 
     <CheckBox
         android:id="@+id/songTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:buttonTint="@color/darkPrimary"
         android:textColor="@color/darkPrimary"
-        android:buttonTint="@color/darkPrimary"/>
+        />
 </LinearLayout>
