--- a/FIPLY/App/app/src/main/res/layout/navigation_list.xml
+++ b/FIPLY/App/app/src/main/res/layout/navigation_list.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="fill_parent"
-    android:orientation="horizontal">
+              android:layout_width="match_parent"
+              android:layout_height="fill_parent"
+              android:orientation="horizontal"
+    >
 
     <TextView
         android:id="@+id/navlist_content"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="14dp"
+        android:background="@drawable/buttonshape"
         android:gravity="center"
         android:textColor="@color/darkNavigationText"
         android:textSize="25dp"
-        android:background="@drawable/buttonshape"/>
+        />
 
 </LinearLayout>
