--- a/FIPLY/App/app/src/main/res/layout/uebungskatalog_item.xml
+++ b/FIPLY/App/app/src/main/res/layout/uebungskatalog_item.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp">
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:orientation="vertical"
+              android:padding="8dp"
+    >
 
     <TextView
         android:id="@+id/ueListViewItem"
@@ -13,5 +14,6 @@
         android:background="@color/darkSecondary"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
         android:textColor="@color/darkTextColorLight"
-        android:textSize="25dp" />
+        android:textSize="25dp"
+        />
 </LinearLayout>
