Found error in the detailview of the uebungskatalog

--- a/FIPLY/App/app/src/main/res/layout/fragment_uebungdetail.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_uebungdetail.xml
@@ -116,9 +116,9 @@
             android:id="@+id/detailBeschreibung"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/detailZielGruppe"
+            android:layout_alignLeft="@id/detailEquipment"
             android:layout_alignParentEnd="true"
-            android:layout_below="@id/detailZielGruppe"
+            android:layout_below="@id/detailEquipment"
             android:layout_marginBottom="5dp"
             android:layout_marginRight="5dp"
             android:text="Test Beschreibung"
@@ -129,7 +129,7 @@
             android:id="@+id/staticDetailBeschreibung"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@id/staticDetailZielGruppe"
+            android:layout_alignStart="@id/staticDetailEquipment"
             android:layout_below="@+id/detailZielGruppe"
             android:text="@string/detailDesc"
             android:textColor="@color/darkTextColorLight"
