--- a/FIPLY/App/app/src/main/res/layout/fragment_trainingssession.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_trainingssession.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:id="@+id/trainingssession"
     >
 
     <FrameLayout
@@ -50,7 +51,7 @@
     <FrameLayout
         android:id="@+id/fraTsUebung"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="match_parent"
         android:layout_above="@id/clocksLayout"
         android:background="@color/darkSecondary"
         />
