--- a/FIPLY/App/app/src/main/res/layout/fragment_trainingsinstructions.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_trainingsinstructions.xml
@@ -7,6 +7,7 @@
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:saveEnabled="false"
+            android:id="@+id/scrollViewInstructions"
     >
 
     <RelativeLayout
